--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>蓝白图床-瀑布流图片库-基于Masonry瀑布流的全屏预览图片画廊插件</title>
+	<title>十一图床-瀑布流图片库-基于Masonry瀑布流的全屏预览图片画廊插件</title>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="css/default.css">
 	<link rel="stylesheet" href="dist/stylesheets/chromagallery.min.css">
@@ -48,12 +48,12 @@
 <body>
 	<article class="htmleaf-container">
 		<header class="htmleaf-header">
-			<h1>蓝白图床-瀑布流图片库<span>蓝白图床</span></h1>
+			<h1>十一图床-瀑布流图片库<span>十一图床</span></h1>
 			<div class="htmleaf-links">
-				<a class="htmleaf-icon icon-htmleaf-home-outline" href="http://www.lbcolor.cn/" title="蓝白博客"
-					target="_blank"><span>蓝白博客</span></a>
+				<a class="htmleaf-icon icon-htmleaf-home-outline" href="https://xiao11.xyz/" title="十一博客"
+					target="_blank"><span>十一博客</span></a>
 
-				<a class="htmleaf-icon icon-htmleaf-arrow-forward-outline" href="http://img.lbcolor.cn/"
+				<a class="htmleaf-icon icon-htmleaf-arrow-forward-outline" href="https://i.xiao11.xyz/"
 					title="返回图床"><span> 返回</span></a>
 
 			</div>
